--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -15,24 +15,24 @@
 
         <meta
             name="description"
-            content="MiroTalk powered by WebRTC, Real-time Simple Secure Fast video calls, chat and screen sharing capabilities in the browser, from your mobile or desktop."
+            content="HDM Meet"
         />
         <meta
             name="keywords"
-            content="webrtc, self hosted, voip, sip, real-time communications, chat, messaging, meet, webrtc stun, webrtc turn, video meeting, video chat, video conference, multi video chat, multi video conference, peer to peer, p2p, rtc, alternative to, zoom, microsoft teams, google meet, jitsi, meeting"
+            content="HDM Meet"
         />
 
         <!-- https://ogp.me -->
 
         <meta property="og:type" content="app-webrtc" />
-        <meta property="og:site_name" content="MiroTalk" />
-        <meta property="og:title" content="Click the link to make a call." />
+        <meta property="og:site_name" content="HDM Meet" />
+        <meta property="og:title" content="Cliquez ici pour faire une conférence." />
         <meta
             property="og:description"
-            content="MiroTalk calling provides real-time HD quality and latency simply not available with traditional technology."
+            content="HDM Meet"
         />
-        <meta property="og:image" content="https://p2p.mirotalk.com/images/preview.png" />
-        <meta property="og:url" content="https://p2p.mirotalk.com" />
+        <meta property="og:image" content="https://www.hdmnetwork.com/" />
+        <meta property="og:url" content="https://www.hdmnetwork.com/" />
 
         <!-- xss -->
 
@@ -49,9 +49,7 @@
 
         <!-- StyleSheet -->
 
-        <!-- <link rel="stylesheet" href="../css/snow.css" /> -->
         <link rel="stylesheet" href="../css/landing.css" />
-        <link rel="stylesheet" href="../css/newcall.css" />
         <script src="https://kit.fontawesome.com/90363de2b4.js" crossorigin="anonymous"></script>
 
         <!-- JavaScripts -->
