--- a/public/views/login.html
+++ b/public/views/login.html
@@ -15,7 +15,7 @@
 
         <meta
             name="description"
-            content="MiroTalk powered by WebRTC, Real-time Simple Secure Fast video calls, chat and screen sharing capabilities in the browser, from your mobile or desktop."
+            content="HDM Meet."
         />
         <meta
             name="keywords"
