--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -33,6 +33,7 @@
         />
         <meta property="og:image" content="https://www.hdmnetwork.com/" />
         <meta property="og:url" content="https://www.hdmnetwork.com/" />
+        <link rel="stylesheet" href="./fonts/bespoke-stencil.css">
 
         <!-- xss -->
 
