--- a/public/views/client.html
+++ b/public/views/client.html
@@ -98,7 +98,7 @@
             <div class="initComands">
                 <button id="initVideoBtn" class="fas fa-video" onclick="handleVideo(event, true)"></button>
                 <button id="initAudioBtn" class="fas fa-microphone" onclick="handleAudio(event, true)"></button>
-                <button id="initScreenShareBtn" class="fas fa-desktop"></button>
+                <!-- <button id="initScreenShareBtn" class="fas fa-desktop"></button> -->
                 <button
                     id="initVideoMirrorBtn"
                     class="fas fa-arrow-right-arrow-left"
