--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1010,9 +1010,30 @@ fieldset {
     font-size: 14px;
     line-height: 22px;
 }
-.form-input{
+
+.form-input, .form-select {
+    display: block;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.1px;
+    padding: 11px 15px;
+    height: 48px;
+    border-radius: 0;
+    color: #16171b;
+    box-shadow: none;
+    max-width: 100%;
     width: 35% !important;
+
 }
+
+.input.large{
+    display: block !important;
+}
+
+.input.small{
+    display: none !important;
+}
+
 .form-input,
 .form-select,
 .form-checkbox input,
@@ -1375,6 +1396,44 @@ textarea.form-input {
     .form-group-desktop .button {
         width: 100%;
     }
+
+    .form-input {
+        display: block;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+        padding: 11px 15px;
+        height: 48px;
+        border-radius: 0;
+        color: #16171b;
+        box-shadow: none;
+        max-width: 100%;
+        width: 85% !important;
+    
+    }
+
+    .section-logo{
+        min-height: 110vh !important;
+    }
+
+    .btn-connexion{
+        width: 85% !important;
+    }
+    .input.large{
+        display: none !important;
+    }
+    
+   .input.small{
+        display: block !important;
+    }
+    .titre-accueil.espace-accueil{
+        font-size: 1.8rem !important;
+    }
+
+    .last-room{
+        margin-top: 20% !important;
+    }
+    
 }
 
 @media (min-width: 641px) {
@@ -1393,6 +1452,8 @@ textarea.form-input {
         padding-right: 24px;
         flex-shrink: 0;
     }
+
+
 }
 
 .header-nav-toggle {
